--- a/package.json
+++ b/package.json
@@ -18,6 +18,17 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.14.1",
+    "@react-email/button": "^0.0.10",
+    "@react-email/column": "^0.0.7",
+    "@react-email/components": "^0.0.7",
+    "@react-email/container": "^0.0.8",
+    "@react-email/font": "^0.0.3",
+    "@react-email/heading": "^0.0.8",
+    "@react-email/html": "0.0.4",
+    "@react-email/img": "^0.0.5",
+    "@react-email/render": "0.0.7",
+    "@react-email/tailwind": "0.0.8",
+    "@react-email/text": "^0.0.5",
     "@typegoose/typegoose": "^11.3.0",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
@@ -39,6 +50,7 @@
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-email": "^1.9.4",
     "react-hook-form": "^7.45.1",
     "react-query": "^3.39.3",
     "react-youtube": "^10.1.0",
