--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "tailwindcss": "3.3.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -71,6 +72,7 @@
     "@types/lodash": "^4.14.195",
     "@types/mongoose": "^5.11.97",
     "@types/stack-utils": "^2.0.1",
+    "@types/uuid": "^9.0.2",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
     "jest-fetch-mock": "^3.0.3",
