--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@jitsi/react-sdk": "^1.3.0",
     "@mui/material": "^5.14.1",
     "@react-email/button": "^0.0.10",
     "@react-email/column": "^0.0.7",
