--- a/package.json
+++ b/package.json
@@ -12,24 +12,10 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^1.0.0",
     "@ctrl/react-adsense": "^1.7.0",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@jitsi/react-sdk": "^1.3.0",
-    "@mui/material": "^5.14.1",
-    "@react-email/button": "^0.0.10",
-    "@react-email/column": "^0.0.7",
-    "@react-email/components": "^0.0.7",
-    "@react-email/container": "^0.0.8",
-    "@react-email/font": "^0.0.3",
-    "@react-email/heading": "^0.0.8",
-    "@react-email/html": "0.0.4",
-    "@react-email/img": "^0.0.5",
-    "@react-email/render": "0.0.7",
-    "@react-email/tailwind": "0.0.8",
-    "@react-email/text": "^0.0.5",
+    "@tanstack/react-query": "^4.35.0",
     "@typegoose/typegoose": "^11.3.0",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
@@ -41,8 +27,6 @@
     "escape-string-regexp": "^5.0.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
-    "isomorphic-fetch": "^3.0.0",
-    "jimp": "^0.22.8",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.3",
     "next": "13.4.9",
@@ -52,9 +36,7 @@
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-email": "^1.9.4",
     "react-hook-form": "^7.45.1",
-    "react-query": "^3.39.3",
     "react-youtube": "^10.1.0",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.7.2",
