--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "agora-rtc-react": "^1.1.3",
+    "agora-rtm-sdk": "^1.5.1",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
