--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node messageServer.js",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node messageServer.js",
     "lint": "next lint",
     "test": "jest && npm run build"
   },
@@ -29,6 +29,7 @@
     "escape-string-regexp": "^5.0.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "express": "^4.18.2",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.3",
     "next": "13.4.9",
@@ -41,6 +42,7 @@
     "react-hook-form": "^7.45.1",
     "react-youtube": "^10.1.0",
     "simple-peer": "^9.11.1",
+    "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "sweetalert2": "^11.7.16",
     "tailwindcss": "3.3.2",
