--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@types/ua-parser-js": "^0.7.37",
     "agora-rtc-react": "^1.1.3",
     "agora-rtm-sdk": "^1.5.1",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cloudinary": "^1.37.3",
+    "cookies-next": "^4.0.0",
     "escape-string-regexp": "^5.0.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
@@ -49,6 +51,7 @@
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "5.1.6",
+    "ua-parser-js": "^1.0.36",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
