--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "chart.js": "^4.4.0",
     "cloudinary": "^1.37.3",
     "cookies-next": "^4.0.0",
     "escape-string-regexp": "^5.0.0",
@@ -40,6 +41,7 @@
     "png-to-jpeg": "^1.0.1",
     "postcss": "8.4.25",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
     "react-youtube": "^10.1.0",
