--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-email/components": "^0.0.7",
+    "@react-email/render": "^0.0.7",
+    "@react-email/tailwind": "^0.0.8",
+    "@sendgrid/mail": "^7.7.0",
     "@tanstack/react-query": "^4.35.0",
     "@typegoose/typegoose": "^11.3.0",
     "@types/node": "20.4.1",
