--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-email/tailwind": "^0.0.8",
     "@sendgrid/mail": "^7.7.0",
     "@tanstack/react-query": "^4.35.0",
+    "@tinymce/tinymce-react": "^4.3.0",
     "@typegoose/typegoose": "^11.3.0",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
@@ -61,6 +62,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
