--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "express": "^4.18.2",
+    "he": "^1.2.0",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.3",
     "next": "13.4.9",
@@ -68,6 +69,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
+    "@types/he": "^1.2.3",
     "@types/isomorphic-fetch": "^0.0.36",
     "@types/jest": "^29.5.3",
     "@types/lodash": "^4.14.195",
