--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest && npm run build"
+    "test": "jest && npm run build",
+    "debug": "set NODE_OPTIONS=--inspect&& next dev"
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^1.0.0",
