assistant compatibility changes3

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
     "react-youtube": "^10.1.0",
+    "sharp": "^0.33.0",
     "simple-peer": "^9.11.1",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
